user register, login, logout done

--- a/rails_app/app/views/photos/index.html.erb
+++ b/rails_app/app/views/photos/index.html.erb
@@ -1,3 +1,14 @@
 <div class="bg-slate-100">
-  photo index
+  <h1>photo index</h1>
+  <% if logged_in? %>
+    <p>
+      <%= link_to "ログアウト", logout_path, data: {turbo_method: :delete} %>
+    </p>
+    <p>Hello, <%= @current_user.user_id %>
+  <% else %>
+    <p>
+      <%= link_to 'ログイン', login_path %>
+      <%= link_to '登録', register_path %>
+    </p>
+  <% end %>
 </div>
