--- a/rails_app/app/views/users/new.html.erb
+++ b/rails_app/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
   <div class='bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4'>
     <h2>登録</h2>
 
-    <%= form_with(model: @user, url: users_path, local: true, class: '') do |f| %>
+    <%= form_with(model: @user, url: register_path, local: true, class: '') do |f| %>
 
       <!-- エラー -->
       <% if f.object.errors.full_messages.any? %>
