--- a/rails_app/app/views/layouts/application.html.erb
+++ b/rails_app/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
 
   <body>
     <main class="container mx-auto mt-28 px-5 flex">
+      <%= render 'layouts/flash' %>
       <%= yield %>
     </main>
   </body>
