--- a/rails_app/app/views/photos/index.html.erb
+++ b/rails_app/app/views/photos/index.html.erb
@@ -1,14 +1,14 @@
 <div class="bg-slate-100">
-  <h1>photo index</h1>
-  <% if logged_in? %>
-    <p>
-      <%= link_to "ログアウト", logout_path, data: {turbo_method: :delete} %>
-    </p>
-    <p>Hello, <%= @current_user.user_id %>
-  <% else %>
-    <p>
-      <%= link_to 'ログイン', login_path %>
-      <%= link_to '登録', register_path %>
-    </p>
-  <% end %>
+  <p>
+    <%= link_to "ログアウト", logout_path, data: {turbo_method: :delete} %>
+  </p>
+  <p>Hello, <%= current_user.user_id %>
+  <p><%= link_to '写真アップロード', new_photo_path %></p>
+  <p>You have <%= @photos.length %> photos</p>
+  <div>
+    <% @photos.each do |photo| %>
+      <%=image_tag photo.image_url, alt: photo.title %>
+      <p><%= photo.title %></p>
+    <% end %>
+  </div>
 </div>
