--- a/rails_app/app/views/photos/index.html.erb
+++ b/rails_app/app/views/photos/index.html.erb
@@ -2,6 +2,10 @@
   <p>
     <%= link_to "ログアウト", logout_path, data: {turbo_method: :delete} %>
   </p>
+  <h1>写真一覧</h1>
+
+  <%= link_to 'MyTweetAppと連携', oauth_connect_path %>
+
   <p>Hello, <%= current_user.user_id %>
   <p><%= link_to '写真アップロード', new_photo_path %></p>
   <p>You have <%= @photos.length %> photos</p>
