--- a/rails_app/app/views/photos/index.html.erb
+++ b/rails_app/app/views/photos/index.html.erb
@@ -5,7 +5,7 @@
   <h1>写真一覧</h1>
 
 
-  <% unless current_user.access_token %>
+  <% unless access_token? %>
     <%= link_to 'MyTweetAppと連携', oauth_connect_path %>
   <% else %>
     <p>MyTweetAppと連携中</p>
