--- a/rails_app/app/views/layouts/_flash.html.erb
+++ b/rails_app/app/views/layouts/_flash.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |type, msg| %>
-  <div class="alert alert-<%= type %>">
+  <div class="flash flash-<%= type %>">
     <%= msg %>
   </div>
 <% end %>
