--- a/rails_app/app/views/photos/new.html.erb
+++ b/rails_app/app/views/photos/new.html.erb
@@ -1,11 +1,11 @@
 <%= form_with(model: @photo, url: photos_path, local: true, method: :post, class: '') do |f| %>
   <div>
     <p><%= f.label :title %></p>
-    <p><%= f.text_field :title, placeholder: 'title', requried: true %></p>
+    <p><%= f.text_field :title, placeholder: 'title' %></p>
   </div>
   <div>
     <p><%= f.label :image %></p>
-    <p><%= f.file_field :image, required: true %></p>
+    <p><%= f.file_field :image %></p>
   </div>
   <%= f.submit 'アップロード' %>
 
