--- a/rails_app/app/views/layouts/application.html.erb
+++ b/rails_app/app/views/layouts/application.html.erb
@@ -20,6 +20,11 @@
   <body>
     <main class="container mx-auto mt-28 px-5 flex">
       <%= render 'layouts/flash' %>
+
+      <% if logged_in? %>
+      <p><%= link_to "ログアウト", logout_path, data: {turbo_method: :delete} %></p>
+      <% end %>
+
       <%= yield %>
     </main>
   </body>
