--- a/rails_app/app/views/photos/new.html.erb
+++ b/rails_app/app/views/photos/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_with(model: @photo, url: photos_path, local: true, method: :post, class: '') do |f| %>
   <!-- エラー -->
   <% if f.object.errors.full_messages.any? %>
-    <ul class='error'>
+    <ul class='alert'>
       <% f.object.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
