--- a/rails_app/app/views/photos/new.html.erb
+++ b/rails_app/app/views/photos/new.html.erb
@@ -1,25 +1,27 @@
+<div class='form-box'>
+  <h1>写真アップロード</h1>
 
-<h1>写真アップロード</h1>
-<%= form_with(model: @photo, url: photos_path, local: true, method: :post, class: '') do |f| %>
-  <!-- エラー -->
-  <% if f.object.errors.full_messages.any? %>
-    <ul class='alert'>
-      <% f.object.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-    </ul>
+  <%= form_with(model: @photo, url: photos_path, local: true, method: :post, class: 'form') do |f| %>
+    <!-- エラー -->
+    <% if f.object.errors.full_messages.any? %>
+      <ul class='alert'>
+        <% f.object.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    <% end %>
+
+    <div class='form-row'>
+      <%= f.label :title %>
+      <%= f.text_field :title, placeholder: '30文字まで' %>
+    </div>
+    <div class='form-row'>
+      <%= f.label :image %>
+      <%= f.file_field :image %>
+    </div>
+    <p class='form-actions'>
+      <%= f.submit 'アップロード' %>
+      <%= link_to 'キャンセル', root_path, class: 'form-link' %>
+    </p>
   <% end %>
-
-  <div>
-    <p><%= f.label :title %></p>
-    <p><%= f.text_field :title, placeholder: '30文字まで' %></p>
-  </div>
-  <div>
-    <p><%= f.label :image %></p>
-    <p><%= f.file_field :image %></p>
-  </div>
-  <p>
-    <%= f.submit 'アップロード' %>
-    <%= link_to 'キャンセル', root_path %>
-  </p>
-<% end %>
+</div>
