--- a/rails_app/app/assets/stylesheets/app.css
+++ b/rails_app/app/assets/stylesheets/app.css
@@ -5,11 +5,19 @@
   --alert-bg: rgb(254 226 226);
   --success-color: rgb(21 128 61);
   --success-bg: rgb(220 252 231);
-  --info-color: rgb(12 74 110);
-  --info-bg: rgb(224 242 254);
 
-  --box-bg: rgb(241 245 249);
-  --text-color: rgb(15 23 42);
+  --slate-50: rgb(248 250 252);
+  --slate-100: rgb(241 245 249);
+  --slate-700: rgb(51 65 85);
+  --slate-500: rgb(100 116 139);
+  --sky-50: rgb(240 249 255);
+  --sky-500: rgb(14 165 233);
+  --sky-400: rgb(56 189 248);
+  --sky-600: rgb(2 132 199);
+}
+
+* {
+  transition: all 0.2s ease-out;
 }
 body {
   position: relative;
@@ -19,14 +27,41 @@ body {
   color: var(--text-color);
 }
 
+a {
+  color: var(--sky-500);
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+img {
+  max-width: 100%;
+  max-height: 100%;
+  aspect-ratio: auto;
+}
+input[type="submit"], .btn-tweet {
+  padding: 0.4rem 1.5rem;
+  border: none;
+  border-radius: 4px;
+  background: var(--sky-500);
+  color: white;
+  &:hover {
+    background: var(--sky-400);
+  }
+  &:active {
+    background: var(--sky-600);
+  }
+}
+
 .alert {
-  margin: 0 0 1rem;
+  margin: 0 0 1.5rem;
   padding: 1rem 2rem;
   border-radius: 4px;
   border: 1px solid var(--alert-color);
   background-color: var(--alert-bg);
   color: var(--alert-color);
 }
+
 .flash {
   padding: 1rem;
   border-bottom: 1px solid var(--success-color);
@@ -41,17 +76,31 @@ body {
 }
 
 .container {
-  display: grid;
-  place-items: center;
+  position: relative;
+  margin: 0 auto;
+  padding: 2rem 0;
+  max-width: 768px;
+  min-width: 320px;
   min-height: 100vh;
 }
 
+.logout {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 0 0 4px 4px;
+  padding: 0.5em 2em;
+  background: var(--slate-100);
+  color: var(--slate-500);
+  font-size: 0.75rem;
+}
 
-.login-box, .register-box {
+.form-box {
+  margin: 3rem auto;
   width: 480px;
   padding: 2rem 3rem;
   border-radius: 4px;
-  background-color: var(--box-bg);
+  background-color: var(--slate-100);
 }
 
 .box-header {
@@ -61,11 +110,91 @@ body {
 .form-row {
   margin: 0 0 1rem;
   > label {
-    margin-right: 1rem;
+    display: block;
+    margin: 0 0 0.5rem;
+  }
+  > input {
+    display: block;
+    width: 100%;
+  }
+}
+.form-actions {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  margin: 2rem 0 1rem;
+  > a {
+    margin: 0 0 0 5rem;
   }
 }
 
-.form-btn {
+.header {
+  margin: 0 0 2rem;
+}
+.nav {
+  display: flex;
+  justify-content: flex-start;
+  border-radius: 4px;
+  overflow: hidden;
+  background: var(--slate-100);
+  > .item {
+    padding: 1rem 2rem;
+  }
+  > a.item:hover {
+    background: var(--sky-400);
+    color: white;
+    text-decoration: none;
+  }
+}
+
+.photo-info {
+  margin: 2rem 0;
+  font-size: 0.75rem;
+  color: var(--slate-500);
+}
+.photos {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 2rem;
+}
+.photo {
+  overflow: hidden;
+  &:hover{
+    .photo-container {
+      background: var(--sky-50);
+    }
+    .photo-image {
+      transform: scale(1.1);
+    }
+  }
+}
+.photo-title {
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  font: 1rem/2 normal ui-sans-serif, sans-serif;
+}
+.photo-container {
+  overflow: hidden;
+  width: 100%;
+  height: auto;
+  aspect-ratio: 4/3;
+  border-radius: 4px;
+  background: var(--slate-50);
+}
+.photo-image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.photo-actions {
+  display: flex;
+  justify-content: center;
   margin: 1rem 0 0;
-  padding: 0.2rem 1rem;
+}
+.btn-tweet {
+  &:hover {
+    text-decoration: none;
+  }
 }
